# TQC-Backtest

./: CMakeLists.txt  Dockerfile.txt  README.md  backtest_engine.cpp  backtest_engine.hpp  config.cpp  config.hpp  http_server.cpp  http_server.hpp  main.cpp  ring_buffer.hpp  settings.json  stats_engine.cpp  stats_engine.hpp  types.hpp
